<resources>
    <string name="app_name">Game Sudoku</string>
    <string name="edit_sudoku">Edit sudoku</string>
    <string name="puzzle_folders">Sudoku puzzle folders</string>
    <string name="version">Version %s</string>
    <string name="homepage" translatable="false">https://opensudoku.moire.org/</string>
    <string name="email" translatable="false">&lt;opensudoku@moire.org&gt;</string>
    <string name="send_me_bugs">
        If you run into a bug, don\'t hesitate to contact me by e-mail
		or use the issue tracker on the project\'s homepage.
	</string>
    <string name="current_developers_label">Current Developer</string>
    <string name="current_developers" translatable="false">Óscar García Amor</string>
    <string name="old_developers_label">Old Developers</string>
    <string name="old_developers" translatable="false">Roman Mašek</string>
    <string name="localization_contributors_label">Localization Contributors</string>
    <string name="localization_contributors" translatable="false">
        Vit Hnilica\n
        Martin Sobola\n
        Martin Helff\n
        Diego Pierotto\n
        Gokay Can Kayki\n
        Paulo Schopf\n
        Joaquim Pedroto Costa\n
        @madcrow\n
        @Tubix\n
        @ceskyDJ
    </string>
    <string name="close">Close</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="name">Name:</string>
    <string name="note">Note:</string>
    <string name="select_number">Select number</string>
    <string name="edit_note">Edit note</string>
    <string name="add_folder">Add folder</string>
    <string name="import_file">Import</string>
    <string name="import_file_title">Import file %s</string>
    <string name="about">About</string>
    <string name="rename_folder">Rename folder</string>
    <string name="delete_folder">Delete folder</string>
    <string name="rename_folder_title">Rename %s</string>
    <string name="delete_folder_title">Delete %s</string>
    <string name="delete_folder_confirm">Are you sure you want to delete this folder?</string>
    <string name="no_puzzles">No puzzles</string>
    <string name="one_puzzle">1 puzzle</string>
    <string name="n_puzzles">%d puzzles</string>
    <string name="all_solved">all solved</string>
    <string name="n_solved">%s solved</string>
    <string name="n_unsolved">%d unsolved</string>
    <string name="n_playing">%d playing</string>
    <string name="solved">Solved</string>
    <string name="playing">Playing</string>
    <string name="not_started">Not started</string>
    <string name="last_played_at">Last played %s</string>
    <string name="created_at">Created %s</string>
    <string name="at_time">at %s</string>
    <string name="yesterday_at_time">yesterday at %s</string>
    <string name="on_date">on %s</string>
    <string name="add_sudoku">Add sudoku</string>
    <string name="filter">Filter</string>
    <string name="filter_by_gamestate">Filter by game state</string>
    <string name="folders">Folders</string>
    <string name="delete_puzzle_confirm">Are you sure you want to delete selected puzzle?</string>
    <string name="reset_puzzle_confirm">Are you sure you want to reset selected puzzle?</string>
    <string name="play_puzzle">Play this puzzle</string>
    <string name="reset_puzzle">Reset puzzle</string>
    <string name="edit_puzzle">Edit puzzle</string>
    <string name="delete_puzzle">Delete puzzle</string>
    <string name="filter_active">Filtered: %s</string>
    <string name="undo">Undo</string>
    <string name="clear_all_notes">Clear all notes</string>
    <string name="fill_in_notes">Fill in notes</string>
    <string name="restart">Restart</string>
    <string name="congrats">Congratulations, you have solved the puzzle in %s!</string>
    <string name="restart_confirm">Are you sure you want to restart this game?</string>
    <string name="well_done">Well done!</string>
    <string name="clear_all_notes_confirm">Are you sure you want to clear all notes?</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="game_settings">Game Settings</string>
    <string name="game_helpers">Game Helpers</string>
    <string name="highlight_wrong_values">Highlight wrong values</string>
    <string name="highlight_wrong_values_summary">Highlight values that break rules of sudoku.</string>
    <string name="input_methods">Input Modes</string>
    <string name="popup">Popup</string>
    <string name="popup_summary">Edit cell value and note in popup.</string>
    <string name="single_number">Single number</string>
    <string name="single_number_summary">Select number, then just tap on cell to set its value or note.</string>
    <string name="numpad">Numpad</string>
    <string name="numpad_summary">Show numpad (acts as standard numeric keyboard)</string>
    <string name="numpad_move_right">Move right on press</string>
    <string name="numpad_move_right_summary">Moves cell selection by one cell to the right when number button is pressed.
	</string>
    <string name="numpad_abbr">Num\nPad</string>
    <string name="popup_abbr">Pop</string>
    <string name="single_number_abbr">SN</string>
    <string name="welcome">Welcome</string>
    <string name="hint">Hint</string>
    <string name="help">Help</string>
    <string name="that_is_all">That\'s all</string>
    <string name="first_run_hint">
        Bạn có thể dùng nhiều cách nhập dữ liệu để chơi.
        Trong khi bạn trải nghiệm trò chơi, khi thay đổi lựa chọn nhập dữ liệu, bạn sẽ nhận được các gợi ý.
        \n\nĐừng quên là bạn cũng có thể chỉnh sửa lựa chọn này trong phần thiết lập.\n
	</string>
    <string name="im_popup_hint">
        You\'re now in the <i>Popup</i> input mode.
        Tap any cell with finger to edit its content.
        \n\nNotice the button in the lower right corner.
        You can use this button to switch to another input mode.\n
	</string>
    <string name="im_single_number_hint">
        You\'re now in the <i>Single number</i> input mode.
        First select any number button by pressing it.
        Then just tap on cells in which you want to have the selected number filled.
        \n\nPress <i>Pencil</i> button to toggle the cell\'s note editing.\n
	</string>
    <string name="im_numpad_hint">
        You\'re now in the <i>Numpad</i> input mode.
        Buttons act as a standard numeric keyboard.
        \n\nPress <i>Pencil</i> button to toggle the cell\'s note editing.\n
	</string>
    <string name="im_disable_modes_hint">
        Please remember that you don\'t have to use all input modes.
        You can disable any of them in the game settings.
        \n\nYou can also use the keyboard and trackball to control the game.
        If you want to enter notes using the keyboard, press number with alt or shift.\n
	</string>
    <string name="help_text">
        <b>Keyboard controls</b>
        \n\nUse trackball to navigate to the desired cell and then press a number on the keyboard to fill in the value.
        If you want to edit the cell\'s note, press number with shift or alt.\n\n

        <b>Input modes</b>
        \n\nYou can switch between several input modes using the button in the lower right corner of the screen.
        You can also disable any input mode in game settings - it will become completely hidden.\n\n

        <b>Pop-up input mode</b>
        \n\nA pop-up dialog is shown when you tap the cell.
        You can edit cell\'s content using this dialog.\n\n

        <b>Single number input mode</b>
        \n\nFirst select any number button by pressing it.
        Then just tap on cells in which you want to have the selected number filled.
        \n\nUse <i>Pencil</i> button to toggle between the cell\'s value and note editing.\n\n

        <b>Numpad input mode</b>
        \n\nButtons act as a standard numeric keyboard.
        \n\nUse <i>Pencil</i> button to toggle between the cell\'s value and note editing.\n
	</string>
    <string name="game">Game</string>
    <string name="show_hints">First launch hints</string>
    <string name="show_hints_summary">Show hints that guide you through application controls</string>
    <string name="show_time">Show time</string>
    <string name="show_time_summary">Show time during gameplay</string>
    <string name="puzzle_inserted">New puzzle has been saved</string>
    <string name="puzzle_updated">Puzzle has been updated</string>
    <string name="puzzles_saved">Puzzles have been saved into \'%s\' folder</string>
    <string name="no_puzzles_found">No puzzles found</string>
    <string name="unknown_import_error">Unknown error occurred while importing puzzles; import was cancelled</string>
    <string name="invalid_format">Invalid format; import was cancelled</string>
    <string name="loading">Loading…</string>
    <string name="more_settings">More Settings</string>
    <string name="screen_border_size">Screen border size</string>
    <string name="screen_border_size_summary">
        Some displays do not react to touches on screen edges.
        This could help in such cases.
	</string>
    <string name="highlight_touched_cell">Highlight cell on touch</string>
    <string name="highlight_touched_cell_summary">Highlights row and column of touched cell</string>
    <string name="export">Export</string>
    <string name="export_folder">Export folder</string>
    <string name="export_all_folders">Export all folders</string>
    <string name="folders_created">%d folders have been imported</string>
    <string name="importing">Importing puzzles…</string>
    <string name="exporting">Exporting puzzles…</string>
    <string name="unknown_export_error">An unknown error occurred while exporting puzzles</string>
    <string name="highlight_completed_values">Highlight completed numbers</string>
    <string name="highlight_completed_values_summary">Highlight buttons for numbers which have been entered 9 times</string>
    <string name="theme">Theme</string>
    <string name="theme_summary">Select color theme for puzzle board</string>
    <string name="select_theme">Select theme</string>
    <string name="filename">Filename</string>
    <string name="directory">Directory</string>
    <string name="sdcard_not_found">SD card not found</string>
    <string name="puzzles_have_been_exported">Puzzles have been exported to \'%s\'</string>
    <string name="file_exists">File already exists. Overwrite?</string>
    <string name="difficulty_hard">Hard</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_easy">Easy</string>
    <string name="show_number_totals">Show Number Totals</string>
    <string name="show_number_totals_summary">Displays count of each number placed</string>
    <string name="fill_in_notes_summary">Enable "Fill in notes" menu item</string>
    <string name="highlight_similar_cells">Highlight similar cells</string>
    <string name="highlight_similar_cells_summary">Highlight cells with similar values</string>
    <string name="bidirectional_selection">Bidirectional selection</string>
    <string name="bidirectional_selection_summary">
        In single number input panel, the selection of a non editable cell automatically
        selects the corresponding button (and vice versa).
    </string>
    <string name="highlight_similar_notes">Highlight similar notes</string>
    <string name="highlight_similar_notes_summary">Highlight cells with similar note values</string>
    <string name="remove_notes_title">Remove notes on number entry</string>
    <string name="remove_notes_summary">Automatically remove notes from the same column, row, and box when entering a number</string>
    <string name="show_sudoku_lists_on_startup_title">Show sudoku lists on startup</string>
    <string name="show_sudoku_lists_on_startup_summary">Show the sudoku lists on startup and skip the title screen.</string>
    <string name="app_startup_category">App Startup</string>
</resources>