<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:os="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/app_startup_category">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="show_sudoku_lists_on_startup"
            android:summary="@string/show_sudoku_lists_on_startup_summary"
            android:title="@string/show_sudoku_lists_on_startup_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/game_helpers">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="highlight_wrong_values"
            android:summary="@string/highlight_wrong_values_summary"
            android:title="@string/highlight_wrong_values" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="highlight_completed_values"
            android:summary="@string/highlight_completed_values_summary"
            android:title="@string/highlight_completed_values" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="highlight_similar_cells"
            android:summary="@string/highlight_similar_cells_summary"
            android:title="@string/highlight_similar_cells" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="highlight_similar_notes"
            android:summary="@string/highlight_similar_notes_summary"
            android:title="@string/highlight_similar_notes" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="bidirectional_selection"
            android:summary="@string/bidirectional_selection_summary"
            android:title="@string/bidirectional_selection" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="show_number_totals"
            android:summary="@string/show_number_totals_summary"
            android:title="@string/show_number_totals" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="fill_in_notes_enabled"
            android:summary="@string/fill_in_notes_summary"
            android:title="@string/fill_in_notes" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="remove_notes_on_input"
            android:summary="@string/remove_notes_summary"
            android:title="@string/remove_notes_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/input_methods">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="im_popup"
            android:summary="@string/popup_summary"
            android:title="@string/popup" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="im_single_number"
            android:summary="@string/single_number_summary"
            android:title="@string/single_number" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="im_numpad"
            android:summary="@string/numpad_summary"
            android:title="@string/numpad" />
        <PreferenceScreen
            android:key="screen_input_methods_advanced"
            android:title="@string/more_settings">
            <PreferenceCategory android:title="@string/numpad">
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="im_numpad_move_right"
                    android:summary="@string/numpad_move_right_summary"
                    android:title="@string/numpad_move_right" />
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/game">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="show_time"
            android:summary="@string/show_time_summary"
            android:title="@string/show_time" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="show_hints"
            android:summary="@string/show_hints_summary"
            android:title="@string/show_hints" />
        <hcmute.vtv_18110069_18110051_18110070.game_sudoku.gui.BoardThemePreference
            android:defaultValue="opensudoku"
            android:dialogTitle="@string/select_theme"
            android:entries="@array/theme_names"
            android:entryValues="@array/theme_codes"
            android:key="theme"
            android:summary="@string/theme_summary"
            android:title="@string/theme" />
        <PreferenceScreen
            android:key="screen_game_advanced"
            android:title="@string/more_settings">
            <hcmute.vtv_18110069_18110051_18110070.game_sudoku.gui.SeekBarPreference
                android:defaultValue="0"
                android:dialogTitle="@string/screen_border_size"
                android:key="screen_border_size"
                android:summary="@string/screen_border_size_summary"
                android:title="@string/screen_border_size"
                os:max="30"
                os:min="0"
                os:valueFormat="%s pixels" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="highlight_touched_cell"
                android:summary="@string/highlight_touched_cell_summary"
                android:title="@string/highlight_touched_cell" />
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>
